<resources>
    <string name="app_name">Simple Corp Task Manager</string>
    <string name="authentication">AUTHENTICATION</string>
    <string name="today">Today:</string>
    <string name="open_tasks">Open tasks</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="our_team">OUR TEAM</string>
    <string name="add_new_user">Add new user</string>
    <string name="return_btn">Return</string>
    <string name="our_team_btn">Our team</string>
    <string name="task_list">TASK LIST</string>
    <string name="add_new_task">ADD NEW TASK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>
    <string name="job_title">Job Title</string>
    <string name="user_name">User Name</string>
    <string name="pick_date">PICK DATE</string>
    <string name="date">Date</string>
    <string name="user">User</string>
    <string name="write_your_task_here">Write your task here</string>
    <string name="cancel">CANCEL</string>
</resources>