<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTaskFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/pick_date" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pick_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pick_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:text="Pick user" />

    <TextView
        android:id="@+id/new_task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/date"
        android:padding="15dp" />

    <TextView
        android:id="@+id/new_task_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_task_date"
        android:layout_centerHorizontal="true"
        android:hint="@string/user"
        android:padding="15dp" />

    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pick_user"
        android:layout_marginTop="100dp"
        android:hint="@string/write_your_task_here"
        android:padding="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_edit_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/cancel_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/save_btn" />

</RelativeLayout>