<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodayPageActivity">

    <TextView
        android:id="@+id/text_view_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/today"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_today"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        tools:text="Date" />

    <TextView
        android:id="@+id/text_view_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_today"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        tools:text="Name" />

    <TextView
        android:id="@+id/text_view_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_date"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        tools:text="Task" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/open_tasks" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/logout" />


</RelativeLayout>